--- a/.gitignore
+++ b/.gitignore
@@ -74,4 +74,7 @@ Plugins/**/Intermediate/*
 # Cache files for the editor to use
 DerivedDataCache/*
 
+# Heavy files
 Content/Gameplay/Actors/Pedestrian/MetaHumans/*
+Content/CitySampleCrowd*
+Content/CitySampleVehicles*
