--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ Plugins/**/Intermediate/*
 DerivedDataCache/*
 
 # Heavy files
-Content/Gameplay/Actors/Pedestrian/MetaHumans/*
-Content/CitySampleCrowd*
-Content/CitySampleVehicles*
+Content/Gameplay/Actors/Pedestrian/MetaHumans
+Content/Vehicle
+Content/CitySampleCrowd
+Content/CitySampleVehicles
